tests/ui/not-trait-or-impl.stderr
error: expected trait or impl block
 --> tests/ui/not-trait-or-impl.rs:2:1
  |
1 | #[typetag::serde]
  | ----------------- in this procedural macro expansion
2 | const HUH: () = ();
  | ^^^^^
  |
  = note: this error originates in the attribute macro `typetag::serde` (in Nightly builds, run with -Z macro-backtrace for more info)
