tests/ui/not-trait-or-impl.rs
#[typetag::serde]
const HUH: () = ();

fn main() {}
